assets/scss/base/mallspace.scss
/* ... */
.footer-links
{
    margin-bottom: 10px;
}

.footer-links a
{
    margin: 0 5px;
    font-size: 14px;
}

#leaderboard
{
    margin-top: 50px;
}

.nvtooltip
{
    z-index: 3;
}

.dashboard-top-menu
{
    list-style: none;
    margin: 0;
    padding: 0;
    display: flex;
    align-items: center;
    margin-right: 15px;
    display: none;
}

.dashboard-top-menu li
{
    margin: 0 10px;
    font-size: 15px;
}

.table>tbody+tbody
{
    border-top: 0;
}

.table>thead>tr>th,
.table>tbody>tr>th,
.table>tfoot>tr>th,
.table>thead>tr>td,
.table>tbody>tr>td,
.table>tfoot>tr>td
{
    border-top: 0;
    padding: 10px 15px;
}

.table>thead>tr>th
{
    border-bottom: 1px solid #e0e0e0;
}

